# stock-rags

./: .env.example  .gitignore  API_FRONTEND_IMPLEMENTATION_GUIDE.md  DETAILED_RELATIONSHIP_DESIGN.md  GRAPH_VISUALIZATION_README.md  IMPLEMENTATION_PLAN_GRAPH_VISUALIZATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PIPELINE_INTEGRATION_GUIDE.md  PIPELINE_MODIFICATION_DESIGN.md  PIPELINE_MODIFICATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  test_phase3.py  test_phase3_logic.py
backend/: Dockerfile  alembic.ini  pyproject.toml  test_llm.py
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/agents/: graph_builder.py  state.py
backend/app/agents/nodes/: __init__.py  intent_node.py  search_nodes.py  synthesis_node.py
backend/app/api/v1/: chat.py  graph.py  models.py  reports.py
backend/app/db/: neo4j.py  postgres.py  postgres_client.py  qdrant.py  redis.py
backend/app/llm/: base.py  router.py
backend/app/llm/providers/: __init__.py  anthropic.py  gemini.py  lmstudio.py  ollama.py  openai.py  vllm.py
backend/app/parsers/: pdf_parser.py
backend/app/prompts/: loader.py
backend/app/prompts/templates/extraction/: entity_extraction.yaml  relation_extraction.yaml
backend/app/prompts/templates/reasoning/: answer_synthesis.yaml  cypher_generation.yaml  (+2 more)
backend/app/services/: extraction_service.py  graph_service.py  graph_visualization_service.py  search_service.py  table_analysis_service.py  vector_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: __init__.py  pipeline_tasks.py  process_report.py
(+46 files in other folders)
